# rails

./: README.md  pyproject.toml
etl/: __main__.py  acidentes_query.sql  extract.py  fluxos_intermed_query.sql  fluxos_ocorrencias_query.sql  intermed_query.sql  intermed_query_verbose.sql  load.py  stations_query.sql  transform.py  trem_formado_query.sql
report/: heat_map.html  heat_map_with_gradient.html  heat_map_with_gradient_2.html  locomotiva.ipynb  locomotivas_EFC_EFVM.xlsx  locomotivas_MRS.xlsx  malha_ferroviária.html  ouvidoria_03_02_2025.ipynb  query_to_report.sql  report_coe.ipynb  sentido.ipynb  template_relatorio.ipynb  trens.ipynb
routes/: __main__.py  fluxos_intermed_query.sql  fluxos_ocorrencias_intermed_query.sql  query_to_routes.sql  routes.py  stations_query.sql
stream/: __main__.py  query_to_stream.sql  stream_data.py
utils/: graph_utils.py  station_manager.py  visualization_utils.py
