[tool.poetry]
name = "rails"
version = "0.1.0"
description = "Create filter by routes for a rail flows database."
authors = ["Lucas Madriles <lmadriles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pandas = "^2.2.2"
geopandas = "^1.0.1"
networkx = "^3.3"
sqlalchemy = "^2.0.36"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
